Fixed horizontal scroll

--- a/app/assets/stylesheets/controllers/main.sass
+++ b/app/assets/stylesheets/controllers/main.sass
@@ -5,6 +5,7 @@ html
         @import 'partials/splash'
         @import 'partials/dashboard/core'
         overflow-y: hidden
+        overflow-x: overlay
         noscript
             @extend .abs-center
             color: #272727
